feat(eslint): Use synonyms

--- a/bin/schemas/tsconfig.json
+++ b/bin/schemas/tsconfig.json
@@ -59,6 +59,7 @@
           ".eslintrc.js",
           ".eslintrc.overrides.js",
           ".eslintrc.rule-overrides.js",
+          ".eslintrc.synonyms.js",
           ".eslintrc.temp.js",
           ".postcssrc.js",
           ".prettierrc.js",
