--- a/bin/schemas/project.json
+++ b/bin/schemas/project.json
@@ -7,6 +7,7 @@
         ".eslintrc.js",
         ".eslintrc.overrides.js",
         ".eslintrc.rule-overrides.js",
+        ".eslintrc.synonyms.js",
         ".eslintrc.temp.js",
         ".prettierrc.js",
         "tsconfig-min.json",
