--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "eslint-plugin-jsdoc": ">=39",
     "eslint-plugin-no-type-assertion": ">=1",
     "eslint-plugin-no-use-extend-native": ">=0",
+    "eslint-plugin-node": ">=11",
     "eslint-plugin-only-warn": ">=1",
     "eslint-plugin-pii": ">=1",
     "eslint-plugin-prettier": ">=4",
@@ -116,6 +117,7 @@
     "eslint-plugin-security": ">=1",
     "eslint-plugin-sonarjs": ">=0",
     "eslint-plugin-sort-destructure-keys": ">=1",
+    "eslint-plugin-sort-imports-requires": ">=1",
     "eslint-plugin-typescript-sort-keys": ">=2",
     "eslint-plugin-unicorn": ">=43",
     "eslint-plugin-vue": ">=9",
