feat(bin): Added ".pre-commit.json" file

--- a/bin/schemas/project.json
+++ b/bin/schemas/project.json
@@ -107,6 +107,7 @@
   ],
   "optionalFiles": [
     ".postcssrc.js",
+    ".pre-commit.json",
     "babel.config.js",
     "composer.json",
     "tsconfig-compile.json"
