feat(bin): Remove ansi sequences from inspect

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@commitlint/cli": ">=17",
     "@commitlint/config-conventional": ">=17",
     "@jest/test-sequencer": ">=28",
-    "@skylib/eslint-plugin": "^0.1.44",
+    "@skylib/eslint-plugin": "^0.1.45",
     "@types/eslint": ">=8",
     "@types/jest": ">=28",
     "@types/node": ">=18",
@@ -135,6 +135,7 @@
     "postcss-scss": ">=4",
     "prettier": ">=2",
     "publish-if-not-exists": ">=1",
+    "strip-ansi-cli": ">=3",
     "stylelint": ">=14",
     "stylelint-config-standard-scss": ">=5",
     "stylelint-no-unsupported-browser-features": ">=5",
