--- a/bin/schemas/package.json
+++ b/bin/schemas/package.json
@@ -93,7 +93,7 @@
           "const": "git config --unset core.hooksPath"
         },
         "inspect": {
-          "const": "quasar inspect"
+          "const": "quasar inspect | strip-ansi 1>webpack.info"
         },
         "lint": {
           "const": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
